[project]
name = "SAC-pytorch"
version = "0.0.10"
description = "Soft Actor Critic - Pytorch"
authors = [
    { name = "Phil Wang", email = "lucidrains@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.9"
license = { file = "LICENSE" }
keywords = [
    'artificial intelligence',
    'deep learning',
    'reinforcement learning',
    'soft actor critic'
]

classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.9',
]

dependencies = [
    'adam-atan2-pytorch>=0.0.15',
    'beartype',
    'einops>=0.8.0',
    'einx[torch]>=0.1.3',
    'ema-pytorch>=0.6.2',
    'jaxtyping',
    'pytorch-custom-utils>=0.0.18',
    'soft-moe-pytorch>=0.1.6',
    'torch>=2.0'
]

[project.urls]
Homepage = "https://pypi.org/project/SAC-pytorch/"
Repository = "https://github.com/lucidrains/SAC-pytorch"

[project.optional-dependencies]
examples = []
test = [
    "pytest"
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["SAC_pytorch"]
